--- a/davos-widget.css
+++ b/davos-widget.css
@@ -56,7 +56,7 @@
 }
 
 /* Quesitons */
-.davoswidget-question {
+.davoswidget-question-text {
     flex-basis: 100%;
     /* display: flex;
     align-items:center;
